Created page with "{| class="wikitable float-right mw-collapsible mw-uncollapsed" !style="width: 33%;"|Název !style="width: 66%;"|Popis |- | {{MenuCommand|Vytváření čáry}} | Barva použitá pro prvky skici během jejich vytváření. |- | {{MenuCommand|Text souřadnice}} | Barva použitá pro souřadnice zobrazené při vytváření prvků skici. |- | {{MenuCommand|Nitkový kurzor}} | Barva použitá pro kurzor ve tvaru nitkového kříže zobrazený při vytváření prvků skici. |..."

--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -293,99 +293,99 @@
 </p>
 <table class="wikitable float-right mw-collapsible mw-uncollapsed">
 <tbody><tr>
-<th style="width: 33%;">Name
+<th style="width: 33%;">N&aacute;zev
 </th>
-<th style="width: 66%;">Description
+<th style="width: 66%;">Popis
 </th></tr>
 <tr>
-<td><b>Creating line</b>
+<td><b>Vytv&aacute;&#345;en&iacute; &#269;&aacute;ry</b>
 </td>
-<td>The color used for sketch elements while they are being created.
+<td>Barva pou&#382;it&aacute; pro prvky skici b&#283;hem jejich vytv&aacute;&#345;en&iacute;.
 </td></tr>
 <tr>
-<td><b>Coordinate text</b>
+<td><b>Text sou&#345;adnice</b>
 </td>
-<td>The color used for the coordinates displayed while creating sketch elements.
+<td>Barva pou&#382;it&aacute; pro sou&#345;adnice zobrazen&eacute; p&#345;i vytv&aacute;&#345;en&iacute; prvk&#367; skici.
 </td></tr>
 <tr>
-<td><b>Cursor crosshair</b>
+<td><b>Nitkov&yacute; kurzor</b>
 </td>
-<td>The color used for the crosshair cursor displayed while creating sketch elements.
+<td>Barva pou&#382;it&aacute; pro kurzor ve tvaru nitkov&eacute;ho k&#345;&iacute;&#382;e zobrazen&yacute; p&#345;i vytv&aacute;&#345;en&iacute; prvk&#367; skici.
 </td></tr>
 <tr>
-<td><b>Geometry</b> <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
+<td><b>Geometrie</b> <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
 </td>
-<td>The colors used for constrained and unconstrained normal geometry. The line pattern and line width can also be specified.
+<td>Barvy pou&#382;it&eacute; pro v&aacute;zanou a nev&aacute;zanou norm&aacute;ln&iacute; geometrii. Lze tak&eacute; specifikovat vzor a &scaron;&iacute;&#345;ku &#269;&aacute;ry.
 </td></tr>
 <tr>
-<td><b>Construction geometry</b>
+<td><b>Konstruk&#269;n&iacute; geometrie</b>
 </td>
-<td>The colors used for constrained and unconstrained <a href="../Sketcher_ToggleConstruction.html" title="Sketcher ToggleConstruction">construction geometry</a>. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: The line pattern and line width can also be specified.
+<td>Barvy pou&#382;it&eacute; pro v&aacute;zanou a nev&aacute;zanou <a href="../Sketcher_ToggleConstruction.html" title="Sketcher ToggleConstruction">konstruk&#269;n&iacute; geometrii</a>. <a href="../index.php?title=Template;Verze&amp;action=edit&amp;redlink=1.html" class="new" title="Template:Verze (page does not exist)">Template:Verze</a>: Lze tak&eacute; specifikovat vzor a &scaron;&iacute;&#345;ku &#269;&aacute;ry.
 </td></tr>
 <tr>
-<td><b>Internal alignment geometry</b>
+<td><b>Geometrie vnit&#345;n&iacute;ho zarovn&aacute;n&iacute;</b>
 </td>
-<td>The colors used for constrained and unconstrained <a href="../Sketcher_RestoreInternalAlignmentGeometry.html" title="Sketcher RestoreInternalAlignmentGeometry">internal alignment geometry</a>. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: The line pattern and line width can also be specified.
+<td>Barvy pou&#382;it&eacute; pro v&aacute;zanou a nev&aacute;zanou <a href="../Sketcher_RestoreInternalAlignmentGeometry.html" title="Sketcher RestoreInternalAlignmentGeometry">vnit&#345;n&iacute; geometrii zarovn&aacute;n&iacute;</a>. <a href="../index.php?title=Template;Verze&amp;action=edit&amp;redlink=1.html" class="new" title="Template:Verze (page does not exist)">Template:Verze</a>: Lze tak&eacute; specifikovat vzor a &scaron;&iacute;&#345;ku &#269;&aacute;ry.
 </td></tr>
 <tr>
-<td><b>External construction geometry</b> <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>
+<td><b>Geometrie vn&#283;j&scaron;&iacute; konstrukce</b> <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>
 </td>
-<td>The color used for external construction geometry. The line pattern and line width can also be specified.
+<td>Barva pou&#382;it&aacute; pro geometrii vn&#283;j&scaron;&iacute; konstrukce. Lze tak&eacute; specifikovat vzor a &scaron;&iacute;&#345;ku &#269;&aacute;ry.
 </td></tr>
 <tr>
-<td><b>External defining geometry</b> <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>
+<td><b>Extern&iacute; defini&#269;n&iacute; geometrie</b> <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>
 </td>
-<td>The color used for external defining geometry. The line pattern and line width can also be specified.
+<td>Barva pou&#382;it&aacute; pro vn&#283;j&scaron;&iacute; definici geometrie. Lze tak&eacute; specifikovat vzor a &scaron;&iacute;&#345;ku &#269;&aacute;ry.
 </td></tr>
 <tr>
-<td><b>Fully constrained sketch</b>
+<td><b>Pln&#283; zavazben&yacute; n&aacute;&#269;rt</b>
 </td>
-<td>The color used for a fully constrained sketch.
+<td>Barva pou&#382;it&aacute; pro pln&#283; zavazbenou skicu.
 </td></tr>
 <tr>
-<td><b>Invalid sketch</b>
+<td><b>Neplatn&yacute; n&aacute;&#269;rt</b>
 </td>
-<td>The color used for an invalid sketch.
+<td>Barva pou&#382;it&aacute; pro neplatn&yacute; n&aacute;&#269;rt.
 </td></tr>
 <tr>
-<td><b>Constraint symbols</b>
+<td><b>Symboly vazeb</b>
 </td>
-<td>The color used for <a href="../Sketcher_ToggleDrivingConstraint.html" title="Sketcher ToggleDrivingConstraint">driving geometric constraints</a>.
+<td>Barva pou&#382;it&aacute; pro <a href="../Sketcher_ToggleDrivingConstraint.html" title="Sketcher ToggleDrivingConstraint">&#345;&iacute;zen&iacute; geometrick&yacute;ch vazeb</a>.
 </td></tr>
 <tr>
-<td><b>Dimensional constraint</b>
+<td><b>Vazba vzd&aacute;lenosti</b>
 </td>
-<td>The color used for <a href="../Sketcher_Dimension.html" title="Sketcher Dimension">driving dimensional constraints</a>.
+<td>Barva pou&#382;it&aacute; pro <a href="../Sketcher_Dimension.html" title="Sketcher Dimension">&#345;&iacute;zen&iacute; rozm&#283;rov&yacute;ch vazeb</a>.
 </td></tr>
 <tr>
 <td><b>Reference constraint</b>
 </td>
-<td>The color used for <a href="../Sketcher_ToggleDrivingConstraint.html" title="Sketcher ToggleDrivingConstraint">reference dimensional constraints</a>.
+<td>Barva pou&#382;it&aacute; pro <a href="../Sketcher_ToggleDrivingConstraint.html" title="Sketcher ToggleDrivingConstraint">referen&#269;n&iacute; rozm&#283;rov&eacute; vazby</a>.
 </td></tr>
 <tr>
-<td><b>Expression dependent constraint</b>
+<td><b>Vazby z&aacute;visl&eacute; na v&yacute;razu</b>
 </td>
-<td>The color used for <a href="../Expressions.html" title="Expressions">expression</a> dependent dimensional constraints.
+<td>Barva pou&#382;it&aacute; pro <a href="../index.php?title=V%C3%BDrazy&amp;action=edit&amp;redlink=1.html" class="new" title="V&yacute;razy (page does not exist)">v&yacute;razy</a> z&aacute;visl&eacute; na rozm&#283;rov&yacute;ch vazb&aacute;ch.
 </td></tr>
 <tr>
-<td><b>Deactivated constraint</b>
+<td><b>Deaktivovan&aacute; vazba</b>
 </td>
-<td>The color used for <a href="../Sketcher_ToggleActiveConstraint.html" title="Sketcher ToggleActiveConstraint">deactivated constraints</a>.
+<td>Barva pou&#382;it&aacute; pro <a href="../Sketcher_ToggleActiveConstraint.html" title="Sketcher ToggleActiveConstraint">deaktivovanou vazbu</a>.
 </td></tr>
 <tr>
-<td><b>Colors Outside Sketcher: Vertex</b>
+<td><b>Colors Outside Sketcher: Vrchol</b>
 </td>
-<td>The color used for <a href="../Glossary.html#Vertex" title="Glossary">vertices</a> (points) when not in edit mode.
+<td>Barva pou&#382;it&aacute; pro <a href="../Glossary.html#Vertex" title="Glossary">vrcholy</a> (body), kdy&#382; nejsou v re&#382;imu &uacute;prav.
 </td></tr>
 <tr>
-<td><b>Colors Outside Sketcher: Edge</b>
+<td><b>Colors Outside Sketcher: Hrana</b>
 </td>
-<td>The color used for <a href="../Glossary.html#Edge" title="Glossary">edges</a> when not in edit mode.
+<td>Barva pou&#382;it&aacute; pro <a href="../Glossary.html#Edge" title="Glossary">hrany</a> mimo re&#382;im &uacute;prav.
 </td></tr>
 <tr>
-<td><b>Colors Outside Sketcher: Face</b>
+<td><b>Colors Outside Sketcher: Plocha</b>
 </td>
-<td>The color used for internal faces formed by intersection geometry or closed loops when not in edit mode.
+<td>Barva pou&#382;it&aacute; pro vnit&#345;n&iacute; plochy vytvo&#345;en&eacute; geometri&iacute; pr&#367;se&#269;&iacute;k&#367; nebo uzav&#345;en&yacute;mi smy&#269;kami, pokud nejsou v re&#382;imu &uacute;prav.
 </td></tr></tbody></table>
 <p>The colors for selections while a sketch is in edit mode are controlled by the global settings <b>Enable preselection</b> and <b>Enable selection</b>, see the <a href="../Preferences_Editor.html#Selection" title="Preferences Editor">Preferences Editor</a>.
 </p><p>The size of the vertices in edit mode is controlled by the <b>Marker size</b> <a href="../Preferences_Editor.html#3D_View" title="Preferences Editor">setting</a>.
@@ -443,15 +443,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122162035
+Cached time: 20260122164638
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.154 seconds
-Real time usage: 0.254 seconds
-Preprocessor visited node count: 1227/1000000
-Post&#8208;expand include size: 30397/2097152 bytes
-Template argument size: 11967/2097152 bytes
+CPU time usage: 0.145 seconds
+Real time usage: 0.253 seconds
+Preprocessor visited node count: 1217/1000000
+Post&#8208;expand include size: 30289/2097152 bytes
+Template argument size: 11963/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -459,19 +459,19 @@ Unstrip post&#8208;expand size: 2250/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   51.035      1 -total
- 17.04%    8.697      1 Template:Sketcher_Tools_navi/cs
- 14.75%    7.526      2 Template:Navigation_menu_2
- 12.92%    6.593      1 Template:Userdocnavi/cs
-  8.79%    4.485     96 Template:MenuCommand
-  8.62%    4.399      3 Template:PropertyView
-  8.31%    4.242      1 Template:Value
-  4.83%    2.467      2 Template:Docnav
-  4.81%    2.454      3 Template:Variable
-  4.76%    2.429      1 Template:Incode
+100.00%   78.307      1 -total
+ 21.56%   16.879      1 Template:Sketcher_Tools_navi/cs
+ 12.44%    9.740      3 Template:PropertyView
+  9.96%    7.802      2 Template:Navigation_menu_2
+  6.57%    5.141     96 Template:MenuCommand
+  5.83%    4.564      3 Template:KEY
+  5.78%    4.528      1 Template:Userdocnavi/cs
+  5.23%    4.096     17 Template:Version
+  5.21%    4.077      1 Template:VersionMinus
+  5.08%    3.981      2 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122162035 and revision id 1742465. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122164637 and revision id 1742467. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
