Created page with "Velikost vrcholů v editačním režimu se řídí nastavením {{MenuCommand|Velikost značky}} [[Preferences_Editor#3D_View|v nastavení]]."

--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -388,7 +388,7 @@
 <td>Barva pou&#382;it&aacute; pro vnit&#345;n&iacute; plochy vytvo&#345;en&eacute; geometri&iacute; pr&#367;se&#269;&iacute;k&#367; nebo uzav&#345;en&yacute;mi smy&#269;kami, pokud nejsou v re&#382;imu &uacute;prav.
 </td></tr></tbody></table>
 <p>Barvy pro v&yacute;b&#283;r v re&#382;imu &uacute;pravy n&aacute;&#269;rtu se &#345;&iacute;d&iacute; glob&aacute;ln&iacute;m nastaven&iacute;m <b>Povolit p&#345;edv&yacute;b&#283;r</b> a <b>Povolit v&yacute;b&#283;r</b>, viz <a href="../Preferences_Editor.html#Selection" title="Preferences Editor">Editor p&#345;edvoleb</a>.
-</p><p>The size of the vertices in edit mode is controlled by the <b>Marker size</b> <a href="../Preferences_Editor.html#3D_View" title="Preferences Editor">setting</a>.
+</p><p>Velikost vrchol&#367; v edita&#269;n&iacute;m re&#382;imu se &#345;&iacute;d&iacute; nastaven&iacute;m <b>Velikost zna&#269;ky</b> <a href="../Preferences_Editor.html#3D_View" title="Preferences Editor">v nastaven&iacute;</a>.
 </p>
 <h2><span class="mw-headline" id="Note">Note</span></h2>
 <p>There is another preference that has an influence on sketches. If the <b>Transparent objects</b> preference on the <a href="../Preferences_Editor.html#3D_View" title="Preferences Editor">Display &rarr; 3D View</a> tab is set to <code>Backface pass</code>, arrowheads on one end of sketch dimensions are hidden on some systems. When viewed from the rear the dimension value can then also be hidden. Versions 0.19 to 0.21 (except Link branch) are affected. In versions 0.19 and 0.20 the effect only occurs if <b>Show grid</b> is deactivated in the <a href="../Sketcher_Dialog.html#Edit_controls" title="Sketcher Dialog">Edit controls</a> section of the <a href="../Task_panel.html" class="mw-redirect" title="Task panel">Task panel</a> as shown below.
@@ -443,15 +443,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122164901
+Cached time: 20260122165002
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.119 seconds
-Real time usage: 0.166 seconds
+CPU time usage: 0.175 seconds
+Real time usage: 0.239 seconds
 Preprocessor visited node count: 1217/1000000
-Post&#8208;expand include size: 30289/2097152 bytes
-Template argument size: 11963/2097152 bytes
+Post&#8208;expand include size: 30294/2097152 bytes
+Template argument size: 11968/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -459,19 +459,19 @@ Unstrip post&#8208;expand size: 2250/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   43.618      1 -total
- 15.62%    6.814      1 Template:Sketcher_Tools_navi/cs
- 11.06%    4.825      3 Template:PropertyView
- 10.43%    4.550      2 Template:Navigation_menu_2
-  8.93%    3.894      1 Template:Userdocnavi/cs
-  8.68%    3.785     96 Template:MenuCommand
-  8.16%    3.560      1 Template:Value
-  5.82%    2.537      3 Template:Variable
-  5.31%    2.316      2 Template:Docnav
-  5.03%    2.194      1 Template:Button
+100.00%   57.331      1 -total
+ 16.80%    9.633      1 Template:Sketcher_Tools_navi/cs
+ 15.05%    8.629      1 Template:Userdocnavi/cs
+ 11.27%    6.463      2 Template:Navigation_menu_2
+ 10.52%    6.034      3 Template:PropertyView
+  7.47%    4.282     96 Template:MenuCommand
+  7.40%    4.243      1 Template:Value
+  5.62%    3.223      3 Template:Variable
+  4.56%    2.616      2 Template:Docnav
+  4.25%    2.436      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122164901 and revision id 1742469. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122165002 and revision id 1742471. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
