--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -389,8 +389,9 @@
 </td></tr></tbody></table>
 <p>Barvy pro v&yacute;b&#283;r v re&#382;imu &uacute;pravy n&aacute;&#269;rtu se &#345;&iacute;d&iacute; glob&aacute;ln&iacute;m nastaven&iacute;m <b>Povolit p&#345;edv&yacute;b&#283;r</b> a <b>Povolit v&yacute;b&#283;r</b>, viz <a href="../Preferences_Editor.html#Selection" title="Preferences Editor">Editor p&#345;edvoleb</a>.
 </p><p>Velikost vrchol&#367; v edita&#269;n&iacute;m re&#382;imu se &#345;&iacute;d&iacute; nastaven&iacute;m <b>Velikost zna&#269;ky</b> <a href="../Preferences_Editor.html#3D_View" title="Preferences Editor">v nastaven&iacute;</a>.
+</p><p><span id="Note"></span>
 </p>
-<h2><span class="mw-headline" id="Note">Note</span></h2>
+<h2><span id="Pozn.C3.A1mka"></span><span class="mw-headline" id="Pozn&aacute;mka">Pozn&aacute;mka</span></h2>
 <p>There is another preference that has an influence on sketches. If the <b>Transparent objects</b> preference on the <a href="../Preferences_Editor.html#3D_View" title="Preferences Editor">Display &rarr; 3D View</a> tab is set to <code>Backface pass</code>, arrowheads on one end of sketch dimensions are hidden on some systems. When viewed from the rear the dimension value can then also be hidden. Versions 0.19 to 0.21 (except Link branch) are affected. In versions 0.19 and 0.20 the effect only occurs if <b>Show grid</b> is deactivated in the <a href="../Sketcher_Dialog.html#Edit_controls" title="Sketcher Dialog">Edit controls</a> section of the <a href="../Task_panel.html" class="mw-redirect" title="Task panel">Task panel</a> as shown below.
 </p><p>See <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=70975&amp;start=10">forum topic</a>.
 </p><p><span typeof="mw:File"><a href="../index.php?title=Sketcher-Preferences-Note-Arrowhead-01.png&amp;filetimestamp=20220814165731&amp;.html" class="mw-file-description"><img src="../File/Sketcher-Preferences-Note-Arrowhead-01.png" decoding="async" width="200" height="200" class="mw-file-element" data-file-width="200" data-file-height="200"></a></span> <span typeof="mw:File"><a href="../index.php?title=Sketcher-Preferences-Note-Arrowhead-02.png&amp;filetimestamp=20220814170147&amp;.html" class="mw-file-description"><img src="../File/Sketcher-Preferences-Note-Arrowhead-02.png" decoding="async" width="200" height="200" class="mw-file-element" data-file-width="200" data-file-height="200"></a></span>
@@ -443,13 +444,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122165002
+Cached time: 20260122165010
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.175 seconds
-Real time usage: 0.239 seconds
-Preprocessor visited node count: 1217/1000000
+CPU time usage: 0.142 seconds
+Real time usage: 0.208 seconds
+Preprocessor visited node count: 1218/1000000
 Post&#8208;expand include size: 30294/2097152 bytes
 Template argument size: 11968/2097152 bytes
 Highest expansion depth: 7/100
@@ -459,19 +460,19 @@ Unstrip post&#8208;expand size: 2250/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   57.331      1 -total
- 16.80%    9.633      1 Template:Sketcher_Tools_navi/cs
- 15.05%    8.629      1 Template:Userdocnavi/cs
- 11.27%    6.463      2 Template:Navigation_menu_2
- 10.52%    6.034      3 Template:PropertyView
-  7.47%    4.282     96 Template:MenuCommand
-  7.40%    4.243      1 Template:Value
-  5.62%    3.223      3 Template:Variable
-  4.56%    2.616      2 Template:Docnav
-  4.25%    2.436      1 Template:Button
+100.00%   67.373      1 -total
+ 13.56%    9.138      1 Template:Sketcher_Tools_navi/cs
+ 12.67%    8.539      3 Template:PropertyView
+ 10.25%    6.908     96 Template:MenuCommand
+  6.73%    4.532      2 Template:Navigation_menu_2
+  6.13%    4.127      1 Template:Value
+  5.69%    3.834      1 Template:Userdocnavi/cs
+  5.36%    3.613      1 Template:Button
+  5.25%    3.535      3 Template:Variable
+  4.70%    3.169     17 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122165002 and revision id 1742471. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122165010 and revision id 1742473. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
