--- a/wiki/it/Macro_Shake_Sketch.html
+++ b/wiki/it/Macro_Shake_Sketch.html
@@ -1,4 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro Shake Sketch/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+Shake+Sketch&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
+<li><a href="../de/Macro_Shake_Sketch.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Skizze sch&uuml;tteln (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Shake_Sketch.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Shake Sketch (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Shake_Sketch.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Shake Sketch (Secouer l'esquisse) (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
@@ -71,15 +72,15 @@ Scrolla lo schizzo
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Description">Description</span></h2>
-</div>
+<p><span id="Description"></span>
+</p>
+<h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Shake a sketch in order to discover its unconstrained parts.
 </p>
 </div>
 <div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
+<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
 <p>Agita uno schizzo per scoprire le sue parti non vincolate. Entrare in modalit&agrave; di modifica dello schizzo e lanciare la macro. La macro aggiunge un disturbo casuale su tutti i punti dello schizzo. Dopo il disegno viene risolto, le parti vincolate manterranno la loro posizione, parti libere si muoveranno.
 </p>
 </div>
@@ -330,29 +331,29 @@ print('Macro finished.')
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20251009170627
+Cached time: 20260122165358
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.057 seconds
-Real time usage: 0.095 seconds
+CPU time usage: 0.030 seconds
+Real time usage: 0.051 seconds
 Preprocessor visited node count: 105/1000000
 Post&#8208;expand include size: 2505/2097152 bytes
 Template argument size: 917/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 8896/5000000 bytes
+Unstrip post&#8208;expand size: 9068/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.176      1 -total
- 78.98%    7.247      1 Template:Macro/it
- 34.99%    3.211      1 Template:ColoredText
- 16.19%    1.486      1 Template:Clear
+100.00%    9.656      1 -total
+ 69.76%    6.736      1 Template:Macro/it
+ 35.63%    3.441      1 Template:ColoredText
+ 27.84%    2.688      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:40763-0!canonical and timestamp 20251009170627 and revision id 1659286. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:40763-0!canonical and timestamp 20260122165358 and revision id 1742475. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
