--- a/wiki/it/Macro_Shake_Sketch.html
+++ b/wiki/it/Macro_Shake_Sketch.html
@@ -76,12 +76,8 @@ Scrolla lo schizzo
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
 <p>Scuote uno schizzo per scoprirne le parti libere.
+</p><p>Entra in modalit&agrave; di modifica per uno schizzo e avvia la macro. La macro aggiunger&agrave; uno spostamento casuale a tutti i punti dello schizzo. Lo schizzo viene quindi risolto, le parti vincolate manterranno la loro posizione, mentre le parti libere si sposteranno. Esegui sempre questa macro su una copia dello schizzo originale.
 </p>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
-<p>Agita uno schizzo per scoprire le sue parti non vincolate. Entrare in modalit&agrave; di modifica dello schizzo e lanciare la macro. La macro aggiunge un disturbo casuale su tutti i punti dello schizzo. Dopo il disegno viene risolto, le parti vincolate manterranno la loro posizione, parti libere si muoveranno.
-</p>
-</div>
 <div class="mw-translate-fuzzy">
 <p><b>Attenzione, lavorare su una copia del file perch&eacute; la macro "smonta tutto" e si rischia di dover ricominciare da capo.</b>
 </p>
@@ -329,13 +325,13 @@ print('Macro finished.')
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122165436
+Cached time: 20260122165515
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.039 seconds
-Real time usage: 0.070 seconds
-Preprocessor visited node count: 104/1000000
+CPU time usage: 0.034 seconds
+Real time usage: 0.104 seconds
+Preprocessor visited node count: 100/1000000
 Post&#8208;expand include size: 2505/2097152 bytes
 Template argument size: 917/2097152 bytes
 Highest expansion depth: 6/100
@@ -345,13 +341,13 @@ Unstrip post&#8208;expand size: 9068/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.844      1 -total
- 73.39%    7.958      1 Template:Macro/it
- 32.85%    3.562      1 Template:ColoredText
- 23.58%    2.557      1 Template:Clear
+100.00%   13.942      1 -total
+ 73.33%   10.223      1 Template:Macro/it
+ 39.08%    5.449      1 Template:ColoredText
+ 24.23%    3.378      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:40763-0!canonical and timestamp 20260122165436 and revision id 1742477. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:40763-0!canonical and timestamp 20260122165515 and revision id 1742479. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
