--- a/wiki/it/Macro_Shake_Sketch.html
+++ b/wiki/it/Macro_Shake_Sketch.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Shake_Sketch.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Skizze sch&uuml;tteln (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Shake_Sketch.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Shake Sketch (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Shake_Sketch.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Shake Sketch (Secouer l'esquisse) (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Shake_Sketch.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Szkic wstrz&#261;su (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -77,11 +77,8 @@ Scrolla lo schizzo
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
 <p>Scuote uno schizzo per scoprirne le parti libere.
 </p><p>Entra in modalit&agrave; di modifica per uno schizzo e avvia la macro. La macro aggiunger&agrave; uno spostamento casuale a tutti i punti dello schizzo. Lo schizzo viene quindi risolto, le parti vincolate manterranno la loro posizione, mentre le parti libere si sposteranno. Esegui sempre questa macro su una copia dello schizzo originale.
+</p><p>Ripristinare lo schizzo originale con il pulsante <b>Annulla (Ctrl+Z)</b> e <b>Ripristina (Ctrl+Y)</b> (etichettato "Agita schizzo") <b>oppure fare attenzione quando si lavora su una copia del file perch&eacute; la macro "smonta tutto" per visualizzarlo e si potrebbe dover ricominciare da capo.</b>
 </p>
-<div class="mw-translate-fuzzy">
-<p><b>Attenzione, lavorare su una copia del file perch&eacute; la macro "smonta tutto" e si rischia di dover ricominciare da capo.</b>
-</p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Install">Install</span></h2>
 </div>
@@ -325,29 +322,29 @@ print('Macro finished.')
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122165515
+Cached time: 20260122165613
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.034 seconds
-Real time usage: 0.104 seconds
-Preprocessor visited node count: 100/1000000
+CPU time usage: 0.030 seconds
+Real time usage: 0.051 seconds
+Preprocessor visited node count: 99/1000000
 Post&#8208;expand include size: 2505/2097152 bytes
 Template argument size: 917/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 9068/5000000 bytes
+Unstrip post&#8208;expand size: 9069/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.942      1 -total
- 73.33%   10.223      1 Template:Macro/it
- 39.08%    5.449      1 Template:ColoredText
- 24.23%    3.378      1 Template:Clear
+100.00%    7.009      1 -total
+ 76.64%    5.372      1 Template:Macro/it
+ 35.33%    2.476      1 Template:ColoredText
+ 18.85%    1.321      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:40763-0!canonical and timestamp 20260122165515 and revision id 1742479. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:40763-0!canonical and timestamp 20260122165613 and revision id 1742481. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
