--- a/wiki/it/Macro_Shake_Sketch.html
+++ b/wiki/it/Macro_Shake_Sketch.html
@@ -78,10 +78,9 @@ Scrolla lo schizzo
 <p>Scuote uno schizzo per scoprirne le parti libere.
 </p><p>Entra in modalit&agrave; di modifica per uno schizzo e avvia la macro. La macro aggiunger&agrave; uno spostamento casuale a tutti i punti dello schizzo. Lo schizzo viene quindi risolto, le parti vincolate manterranno la loro posizione, mentre le parti libere si sposteranno. Esegui sempre questa macro su una copia dello schizzo originale.
 </p><p>Ripristinare lo schizzo originale con il pulsante <b>Annulla (Ctrl+Z)</b> e <b>Ripristina (Ctrl+Y)</b> (etichettato "Agita schizzo") <b>oppure fare attenzione quando si lavora su una copia del file perch&eacute; la macro "smonta tutto" per visualizzarlo e si potrebbe dover ricominciare da capo.</b>
+</p><p><span id="Install"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Install">Install</span></h2>
-</div>
+<h2><span class="mw-headline" id="Installazione">Installazione</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Available in Addon manager, or manual install.
 </p>
@@ -322,12 +321,12 @@ print('Macro finished.')
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122165613
+Cached time: 20260122165619
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.030 seconds
-Real time usage: 0.051 seconds
+CPU time usage: 0.026 seconds
+Real time usage: 0.103 seconds
 Preprocessor visited node count: 99/1000000
 Post&#8208;expand include size: 2505/2097152 bytes
 Template argument size: 917/2097152 bytes
@@ -338,13 +337,13 @@ Unstrip post&#8208;expand size: 9069/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.009      1 -total
- 76.64%    5.372      1 Template:Macro/it
- 35.33%    2.476      1 Template:ColoredText
- 18.85%    1.321      1 Template:Clear
+100.00%   15.104      1 -total
+ 51.35%    7.756      1 Template:Clear
+ 46.79%    7.067      1 Template:Macro/it
+ 21.75%    3.285      1 Template:ColoredText
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:40763-0!canonical and timestamp 20260122165613 and revision id 1742481. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:40763-0!canonical and timestamp 20260122165619 and revision id 1742483. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
