Created page with "Disponibile nel gestore dei componenti aggiuntivi o tramite installazione manuale."

--- a/wiki/it/Macro_Shake_Sketch.html
+++ b/wiki/it/Macro_Shake_Sketch.html
@@ -81,10 +81,8 @@ Scrolla lo schizzo
 </p><p><span id="Install"></span>
 </p>
 <h2><span class="mw-headline" id="Installazione">Installazione</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Available in Addon manager, or manual install.
+<p>Disponibile nel gestore dei componenti aggiuntivi o tramite installazione manuale.
 </p>
-</div>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>ToolBar Icon
@@ -321,13 +319,13 @@ print('Macro finished.')
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122165619
+Cached time: 20260122165636
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.026 seconds
-Real time usage: 0.103 seconds
-Preprocessor visited node count: 99/1000000
+CPU time usage: 0.032 seconds
+Real time usage: 0.050 seconds
+Preprocessor visited node count: 98/1000000
 Post&#8208;expand include size: 2505/2097152 bytes
 Template argument size: 917/2097152 bytes
 Highest expansion depth: 6/100
@@ -337,13 +335,13 @@ Unstrip post&#8208;expand size: 9069/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.104      1 -total
- 51.35%    7.756      1 Template:Clear
- 46.79%    7.067      1 Template:Macro/it
- 21.75%    3.285      1 Template:ColoredText
+100.00%    7.912      1 -total
+ 72.39%    5.728      1 Template:Macro/it
+ 31.78%    2.515      1 Template:ColoredText
+ 21.93%    1.735      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:40763-0!canonical and timestamp 20260122165619 and revision id 1742483. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:40763-0!canonical and timestamp 20260122165636 and revision id 1742485. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
