--- a/wiki/it/Macro_Shake_Sketch.html
+++ b/wiki/it/Macro_Shake_Sketch.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Shake_Sketch.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Skizze sch&uuml;tteln (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Shake_Sketch.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Shake Sketch (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Shake_Sketch.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Shake Sketch (Secouer l'esquisse) (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Shake_Sketch.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Szkic wstrz&#261;su (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -84,11 +84,8 @@ Scrolla lo schizzo
 <p>Disponibile nel gestore dei componenti aggiuntivi o tramite installazione manuale.
 </p>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>ToolBar Icon
-</p>
-</div>
-<p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Shake_Sketch.png&amp;filetimestamp=20190712164510&amp;.html" class="mw-file-description"><img src="../File/Macro_Shake_Sketch.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
+<p>Icona barra degli strumenti
+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Shake_Sketch.png&amp;filetimestamp=20190712164510&amp;.html" class="mw-file-description"><img src="../File/Macro_Shake_Sketch.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </p><p><b>Macro Shake_Sketch.py</b>
 </p>
 <pre># -*- coding: utf-8 -*-
@@ -319,29 +316,29 @@ print('Macro finished.')
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122165636
+Cached time: 20260122165648
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.032 seconds
-Real time usage: 0.050 seconds
-Preprocessor visited node count: 98/1000000
+CPU time usage: 0.025 seconds
+Real time usage: 0.037 seconds
+Preprocessor visited node count: 97/1000000
 Post&#8208;expand include size: 2505/2097152 bytes
 Template argument size: 917/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 9069/5000000 bytes
+Unstrip post&#8208;expand size: 9073/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.912      1 -total
- 72.39%    5.728      1 Template:Macro/it
- 31.78%    2.515      1 Template:ColoredText
- 21.93%    1.735      1 Template:Clear
+100.00%    4.992      1 -total
+ 71.22%    3.555      1 Template:Macro/it
+ 25.96%    1.296      1 Template:ColoredText
+ 24.86%    1.241      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:40763-0!canonical and timestamp 20260122165636 and revision id 1742485. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:40763-0!canonical and timestamp 20260122165648 and revision id 1742487. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
