--- a/wiki/it/Macro_Code_Colors_Resistance.html
+++ b/wiki/it/Macro_Code_Colors_Resistance.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Code_Colors_Resistance.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Code Farben Widerstand (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Code_Colors_Resistance.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Code Colors Resistance (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Code_Colors_Resistance.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Code Colors Resistance (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="it" dir="ltr">italiano</span></li></ul></div>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li></ul></div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -76,10 +76,8 @@ Macro Code Colors Resistance
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Create the resistance, give the value or the color code, you can also calculate the total value with a serial or parallel resistance.
+<p>Crea la resistenza, indica il valore o il codice colore, ed &egrave; anche anche possibile calcolare il valore totale con una resistenza in serie o in parallelo.
 </p>
-</div>
 <div class="toccolours mw-collapsible mw-collapsed" style="cursor:not-allowed">
 <p>Temporary code for external macro link. Do not use this code. This code is used exclusively by <a href="../Std_AddonMgr.html" title="Std AddonMgr">Addon Manager</a>. <i>Link for optional manual installation: <a rel="nofollow" class="external text" href="https://gist.githubusercontent.com/mario52a/cfce0b58e62b036e910be0e503b14b80/raw/0b75dacf6d0a12885c7920b01f89490ba7664565/code_Colors_Resistance.FCMacro">Macro</a></i>
 </p>
@@ -133,13 +131,13 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/cfce0b58e62b036e910
 </pre>
 <!-- 
 NewPP limit report
-Cached time: 20260122165830
+Cached time: 20260122165855
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.034 seconds
-Real time usage: 0.054 seconds
-Preprocessor visited node count: 112/1000000
+CPU time usage: 0.028 seconds
+Real time usage: 0.041 seconds
+Preprocessor visited node count: 111/1000000
 Post&#8208;expand include size: 3447/2097152 bytes
 Template argument size: 1197/2097152 bytes
 Highest expansion depth: 5/100
@@ -149,13 +147,13 @@ Unstrip post&#8208;expand size: 2339/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.409      1 -total
- 36.10%    3.036      1 Template:Macro
- 31.93%    2.685      1 Template:Caption
- 29.66%    2.494      1 Template:Codeextralink
+100.00%    7.873      1 -total
+ 38.18%    3.006      1 Template:Caption
+ 35.67%    2.808      1 Template:Macro
+ 23.55%    1.854      1 Template:Codeextralink
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412266-0!canonical and timestamp 20260122165830 and revision id 1742489. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412266-0!canonical and timestamp 20260122165855 and revision id 1742491. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
