--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -393,7 +393,7 @@
 </p>
 <h2><span id="Pozn.C3.A1mka"></span><span class="mw-headline" id="Pozn&aacute;mka">Pozn&aacute;mka</span></h2>
 <p>Existuje je&scaron;t&#283; jedna preference, kter&aacute; m&aacute; vliv na n&aacute;&#269;rtky. Pokud je p&#345;edvolba <b>Pr&#367;hledn&eacute; objekty</b> na kart&#283; <a href="../Preferences_Editor.html#3D_View" title="Preferences Editor">Zobrazen&iacute; &rarr; 3D pohled</a> nastavena na <code>Pr&#367;chod zadn&iacute; stranou</code>, jsou &scaron;ipky na jednom konci rozm&#283;r&#367; n&aacute;&#269;rtu na n&#283;kter&yacute;ch syst&eacute;mech skryty. P&#345;i pohledu zezadu lze hodnotu rozm&#283;ru tak&eacute; skr&yacute;t. Ovlivn&#283;ny jsou verze 0.19 a&#382; 0.21 (krom&#283; v&#283;tve Link). Ve verz&iacute;ch 0.19 a 0.20 se tento efekt projev&iacute; pouze v p&#345;&iacute;pad&#283;, &#382;e je v sekci <a href="../Sketcher_Dialog.html#Edit_controls" title="Sketcher Dialog">&Uacute;pravy ovl&aacute;dac&iacute;ch prvk&#367;</a> na <a href="../Task_panel.html" class="mw-redirect" title="Task panel">Panelu &uacute;kol&#367;</a> deaktivov&aacute;na volba <b>Zobrazit m&#345;&iacute;&#382;ku</b>, jak je zn&aacute;zorn&#283;no n&iacute;&#382;e.
-</p><p>See <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=70975&amp;start=10">forum topic</a>.
+</p><p>Viz <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=70975&amp;start=10">forum topic</a>.
 </p><p><span typeof="mw:File"><a href="../index.php?title=Sketcher-Preferences-Note-Arrowhead-01.png&amp;filetimestamp=20220814165731&amp;.html" class="mw-file-description"><img src="../File/Sketcher-Preferences-Note-Arrowhead-01.png" decoding="async" width="200" height="200" class="mw-file-element" data-file-width="200" data-file-height="200"></a></span> <span typeof="mw:File"><a href="../index.php?title=Sketcher-Preferences-Note-Arrowhead-02.png&amp;filetimestamp=20220814170147&amp;.html" class="mw-file-description"><img src="../File/Sketcher-Preferences-Note-Arrowhead-02.png" decoding="async" width="200" height="200" class="mw-file-element" data-file-width="200" data-file-height="200"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Front view, grid enabled and grid disabled</p>
@@ -444,12 +444,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122165913
+Cached time: 20260122165941
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.133 seconds
-Real time usage: 0.323 seconds
+CPU time usage: 0.146 seconds
+Real time usage: 0.207 seconds
 Preprocessor visited node count: 1218/1000000
 Post&#8208;expand include size: 30323/2097152 bytes
 Template argument size: 11997/2097152 bytes
@@ -460,19 +460,19 @@ Unstrip post&#8208;expand size: 2250/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  127.049      1 -total
- 13.81%   17.540      3 Template:PropertyView
- 13.29%   16.880      1 Template:Sketcher_Tools_navi/cs
- 13.10%   16.643      1 Template:Userdocnavi/cs
- 10.21%   12.969      1 Template:Value
-  8.69%   11.042      1 Template:Button
-  6.36%    8.076      2 Template:Navigation_menu_2
-  6.24%    7.927      3 Template:Variable
-  4.99%    6.338     96 Template:MenuCommand
-  3.90%    4.960     17 Template:Version
+100.00%   55.920      1 -total
+ 12.87%    7.199      1 Template:Sketcher_Tools_navi/cs
+ 12.52%    7.000      1 Template:Value
+  8.14%    4.551     96 Template:MenuCommand
+  8.07%    4.515      1 Template:Button
+  7.96%    4.451      2 Template:Navigation_menu_2
+  7.85%    4.390      3 Template:PropertyView
+  6.56%    3.666      1 Template:Userdocnavi/cs
+  5.24%    2.929      1 Template:Incode
+  4.81%    2.689      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122165912 and revision id 1742493. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122165941 and revision id 1742495. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
