--- a/wiki/it/Macro_Code_Colors_Resistance.html
+++ b/wiki/it/Macro_Code_Colors_Resistance.html
@@ -116,9 +116,9 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/cfce0b58e62b036e910
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Version">Version</span></h2>
-</div>
+<p><span id="Version"></span>
+</p>
+<h2><span class="mw-headline" id="Versione">Versione</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>ver: 0.1a&nbsp;: 12/12/2025&nbsp;: add link and change line 812:
 </p>
@@ -129,11 +129,11 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/cfce0b58e62b036e910
 </pre>
 <!-- 
 NewPP limit report
-Cached time: 20260122170118
+Cached time: 20260122170123
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.033 seconds
+CPU time usage: 0.027 seconds
 Real time usage: 0.049 seconds
 Preprocessor visited node count: 110/1000000
 Post&#8208;expand include size: 3469/2097152 bytes
@@ -145,13 +145,13 @@ Unstrip post&#8208;expand size: 2339/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.239      1 -total
- 44.28%    3.648      1 Template:Macro
- 34.57%    2.848      1 Template:Codeextralink
- 18.98%    1.564      1 Template:Caption
+100.00%    9.020      1 -total
+ 34.41%    3.104      1 Template:Caption
+ 34.17%    3.082      1 Template:Codeextralink
+ 29.64%    2.674      1 Template:Macro
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412266-0!canonical and timestamp 20260122170118 and revision id 1742499. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412266-0!canonical and timestamp 20260122170123 and revision id 1742501. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
