Created page with "{{Caption|Pohled zepředu, mřížka zapnutá a mřížka vypnutá}}"

--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -396,7 +396,7 @@
 </p><p>Viz <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=70975&amp;start=10">forum topic</a>.
 </p><p><span typeof="mw:File"><a href="../index.php?title=Sketcher-Preferences-Note-Arrowhead-01.png&amp;filetimestamp=20220814165731&amp;.html" class="mw-file-description"><img src="../File/Sketcher-Preferences-Note-Arrowhead-01.png" decoding="async" width="200" height="200" class="mw-file-element" data-file-width="200" data-file-height="200"></a></span> <span typeof="mw:File"><a href="../index.php?title=Sketcher-Preferences-Note-Arrowhead-02.png&amp;filetimestamp=20220814170147&amp;.html" class="mw-file-description"><img src="../File/Sketcher-Preferences-Note-Arrowhead-02.png" decoding="async" width="200" height="200" class="mw-file-element" data-file-width="200" data-file-height="200"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Front view, grid enabled and grid disabled</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Pohled zep&#345;edu, m&#345;&iacute;&#382;ka zapnut&aacute; a m&#345;&iacute;&#382;ka vypnut&aacute;</p>
 <p><span typeof="mw:File"><a href="../index.php?title=Sketcher-Preferences-Note-Arrowhead-03.png&amp;filetimestamp=20220814170225&amp;.html" class="mw-file-description"><img src="../File/Sketcher-Preferences-Note-Arrowhead-03.png" decoding="async" width="200" height="200" class="mw-file-element" data-file-width="200" data-file-height="200"></a></span> <span typeof="mw:File"><a href="../index.php?title=Sketcher-Preferences-Note-Arrowhead-04.png&amp;filetimestamp=20220814170259&amp;.html" class="mw-file-description"><img src="../File/Sketcher-Preferences-Note-Arrowhead-04.png" decoding="async" width="200" height="200" class="mw-file-element" data-file-width="200" data-file-height="200"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Rear view, grid enabled and grid disabled hiding arrowheads on the opposite end as well as the dimension value</p>
@@ -444,15 +444,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122165941
+Cached time: 20260122170342
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.146 seconds
-Real time usage: 0.207 seconds
+CPU time usage: 0.138 seconds
+Real time usage: 0.222 seconds
 Preprocessor visited node count: 1218/1000000
-Post&#8208;expand include size: 30323/2097152 bytes
-Template argument size: 11997/2097152 bytes
+Post&#8208;expand include size: 30351/2097152 bytes
+Template argument size: 12011/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -460,19 +460,19 @@ Unstrip post&#8208;expand size: 2250/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   55.920      1 -total
- 12.87%    7.199      1 Template:Sketcher_Tools_navi/cs
- 12.52%    7.000      1 Template:Value
-  8.14%    4.551     96 Template:MenuCommand
-  8.07%    4.515      1 Template:Button
-  7.96%    4.451      2 Template:Navigation_menu_2
-  7.85%    4.390      3 Template:PropertyView
-  6.56%    3.666      1 Template:Userdocnavi/cs
-  5.24%    2.929      1 Template:Incode
-  4.81%    2.689      2 Template:Docnav
+100.00%   66.572      1 -total
+ 17.22%   11.464      1 Template:Sketcher_Tools_navi/cs
+ 16.34%   10.876      3 Template:PropertyView
+ 11.75%    7.822      1 Template:Userdocnavi/cs
+ 11.43%    7.611      3 Template:Variable
+ 10.97%    7.301      2 Template:Navigation_menu_2
+  8.95%    5.959      1 Template:Value
+  7.39%    4.920     96 Template:MenuCommand
+  3.96%    2.634      1 Template:Incode
+  3.60%    2.397      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122165941 and revision id 1742495. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122170342 and revision id 1742508. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
