Created page with "== Úvod =="

--- a/wiki/cs/Task_Panel.html
+++ b/wiki/cs/Task_Panel.html
@@ -6,12 +6,14 @@
 <li><a href="../it/Task_Panel.html" class="mw-pt-progress mw-pt-progress--complete" title="Pannello delle Azioni (100% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Task_Panel.html" class="mw-pt-progress mw-pt-progress--complete" title="Panel zada&#324; (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Task_Panel.html" class="mw-pt-progress mw-pt-progress--low" title="Painel de tarefas (8% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Task_Panel.html" class="mw-pt-progress mw-pt-progress--med" title="&#1055;&#1072;&#1085;&#1077;&#1083;&#1100; &#1079;&#1072;&#1076;&#1072;&#1095; (17% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Task_Panel.html" class="mw-pt-progress mw-pt-progress--complete" title="&#20219;&#21153;&#38754;&#26495; (100% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ko/Task_Panel.html" class="mw-pt-progress mw-pt-progress--low" title="&#51089;&#50629; &#54056;&#45328;(Task panel) (0% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
-<h2><span class="mw-headline" id="Introduction">Introduction</span></h2>
+<p><span id="Introduction"></span>
+</p>
+<h2><span id=".C3.9Avod"></span><span class="mw-headline" id="&Uacute;vod">&Uacute;vod</span></h2>
 <p>The <a href="../Task_Panel.html" title="Task Panel">Task Panel</a> appears as a stand-alone <a href="../Combo_view.html#Dock_Task_Panel_on_top_of_Combo_View" class="mw-redirect" title="Combo view">dockable</a> panel called <b>Tasks</b>. It is a customizable space that is able to contain any type of graphical widgets like input fields, checkboxes, spinboxes, buttons, labels, images, and other elements, depending on the currently active tool.
 </p><p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_Combo_view_Task_panel.png&amp;filetimestamp=20191215005044&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Combo_view_Task_panel.png" decoding="async" width="250" height="292" class="mw-file-element" data-file-width="557" data-file-height="651"></a></span>
 </p>
@@ -86,13 +88,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122170742
+Cached time: 20260122170750
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.077 seconds
-Real time usage: 0.216 seconds
-Preprocessor visited node count: 401/1000000
+CPU time usage: 0.072 seconds
+Real time usage: 0.098 seconds
+Preprocessor visited node count: 402/1000000
 Post&#8208;expand include size: 32569/2097152 bytes
 Template argument size: 11895/2097152 bytes
 Highest expansion depth: 5/100
@@ -102,18 +104,18 @@ Unstrip post&#8208;expand size: 2119/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.038      1 -total
- 29.32%   10.566      1 Template:Std_Base_navi/cs
- 24.08%    8.679      1 Template:Userdocnavi/cs
- 18.91%    6.816      1 Template:Interface_navi/cs
- 18.47%    6.658      3 Template:Navigation_menu_2
- 15.79%    5.691      1 Template:TOCright
-  3.68%    1.325      2 Template:Caption
-  3.24%    1.169      2 Template:Button
-  3.19%    1.149      3 Template:KEY
+100.00%   20.650      1 -total
+ 31.99%    6.605      1 Template:Std_Base_navi/cs
+ 29.85%    6.165      3 Template:Navigation_menu_2
+ 23.77%    4.909      1 Template:Interface_navi/cs
+ 20.99%    4.334      1 Template:Userdocnavi/cs
+  5.65%    1.167      2 Template:Caption
+  5.64%    1.165      1 Template:TOCright
+  4.58%    0.946      2 Template:Button
+  4.32%    0.892      3 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412279-0!canonical and timestamp 20260122170742 and revision id 1742516. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412279-0!canonical and timestamp 20260122170750 and revision id 1742518. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
