Created page with "== Práce s panelem úkolů =="

--- a/wiki/cs/Task_Panel.html
+++ b/wiki/cs/Task_Panel.html
@@ -18,7 +18,9 @@
 </p><p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_Combo_view_Task_panel.png&amp;filetimestamp=20191215005044&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Combo_view_Task_panel.png" decoding="async" width="250" height="292" class="mw-file-element" data-file-width="557" data-file-height="651"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Panel &uacute;kol&#367; zobrazuj&iacute;c&iacute; r&#367;zn&eacute; n&aacute;stroje, kdy&#382; je aktivn&iacute; <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">pracovn&iacute; plocha PartDesign</a> a je vybr&aacute;n <a href="../Sketch.html" title="Sketch">N&aacute;&#269;rt</a>.</p>
-<h2><span class="mw-headline" id="Working_with_the_Task_Panel">Working with the Task Panel</span></h2>
+<p><span id="Working_with_the_Task_Panel"></span>
+</p>
+<h2><span id="Pr.C3.A1ce_s_panelem_.C3.BAkol.C5.AF"></span><span class="mw-headline" id="Pr&aacute;ce_s_panelem_&uacute;kol&#367;">Pr&aacute;ce s panelem &uacute;kol&#367;</span></h2>
 <p>A Task Panel normally opens when a tool that requires user input is activated. If the tool doesn't need user input, it will produce its result or terminate, but won't display a Task Panel. The user input may be anything such as text, 3D point coordinates, elements from a list, faces from a shape, or options to modify the way the tool operates.
 </p><p>There are many tools that require the selection of shapes or objects. In such cases the Task Panel will wait for the user to select the appropriate objects from the <a href="../Tree_View.html" title="Tree View">Tree View</a> or the <a href="../3D_View.html" title="3D View">3D View</a>. When a Task Panel is open, it is possible to switch to the <a href="../Tree_View.html" title="Tree View">Tree View</a> to choose an object. Once this is done, it is possible to switch back to the Task Panel to proceed with the tool. The Task Panel is usually closed by clicking an <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> or a <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Close</span> button, or pressing the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Esc</span> key to abort the tool.
 </p><p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_Combo_view_Task_panel_ArchComponent.png&amp;filetimestamp=20190928004925&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Combo_view_Task_panel_ArchComponent.png" decoding="async" width="250" height="333" class="mw-file-element" data-file-width="424" data-file-height="565"></a></span>
@@ -88,13 +90,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122171303
+Cached time: 20260122171333
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.099 seconds
-Real time usage: 0.154 seconds
-Preprocessor visited node count: 401/1000000
+CPU time usage: 0.082 seconds
+Real time usage: 0.104 seconds
+Preprocessor visited node count: 402/1000000
 Post&#8208;expand include size: 32599/2097152 bytes
 Template argument size: 11910/2097152 bytes
 Highest expansion depth: 5/100
@@ -104,18 +106,18 @@ Unstrip post&#8208;expand size: 2119/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.671      1 -total
- 29.56%    7.885      1 Template:Std_Base_navi/cs
- 25.63%    6.836      3 Template:Navigation_menu_2
- 17.75%    4.734      1 Template:Interface_navi/cs
- 16.12%    4.300      1 Template:Userdocnavi/cs
- 10.58%    2.821      1 Template:TOCright
-  8.68%    2.316      3 Template:KEY
-  7.78%    2.075      2 Template:Caption
-  6.25%    1.668      2 Template:Button
+100.00%   22.698      1 -total
+ 35.38%    8.031      3 Template:Navigation_menu_2
+ 35.20%    7.991      1 Template:Std_Base_navi/cs
+ 19.95%    4.529      1 Template:Userdocnavi/cs
+ 16.67%    3.783      1 Template:Interface_navi/cs
+  7.09%    1.609      2 Template:Caption
+  7.04%    1.599      1 Template:TOCright
+  5.74%    1.302      2 Template:Button
+  4.89%    1.111      3 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412279-0!canonical and timestamp 20260122171303 and revision id 1742523. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412279-0!canonical and timestamp 20260122171333 and revision id 1742525. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
